--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,80 @@
-{% include layout.html include="footer.html" %}
-{% if default_include %}
-<footer class="site-footer">
-<div class="wrapper">
-This site last compiled {{ site.time | date_to_rfc822 }}
-</div>
-  <!-- Basic conference information -->
-  <div class="footer-left">
+<div id='footer'>
+  <div class='three spacing'></div>
+  <div class='row'>
+    <div class='large-3 medium-3 columns'>
+      <h1>
+        <a href='index.html'>
+          <img alt="" src="{{site.baseurl}}/images/logo-landscape-white-out.png" />
+        </a>
+      </h1>
+      <p>©2021 {{site.title}}. All rights reserved.</p>
+      <div class='spacing'></div>
+      <div class='spacing'></div>
+    </div>
+    <div class='large-3 medium-3 columns'>
+      <div class='spacing'></div>
+      <div class='links'>
+        <h4>Our work</h4>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="latest.html">Announcements and updates</a></li>
+          <li><a href="resources.html">Resources</a></li>
+          <li><a href="get-involved.html">Contact us</a></li>
+          <li><a href="https://mlatcl.github.io">More about ML@CL</a></li>
+        </ul>
+      </div>
+      <div class='spacing'></div>
+    </div>
+    <div class='large-3 medium-3 columns'>
+      <div class='spacing'></div>
+      <div class='links'>
+        <h4>Recent posts</h4>
+        <ul>
+          {% for post in site.posts %}
+            <li><a href="{{post.url}}">{{post.title}}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class='spacing'></div>
+    </div>
+    <div class='large-3 medium-3 columns'>
+      <div class='spacing'></div>
+      <h4>Contact us</h4>
+      <ul>
+        <li>accelerate-science@cst.cam.ac.uk</li>
+        <li>Department of Computer Science and Technology<br/>
+          William Gates Building<br/>
+          15 J J Thomson Avenue<br/>
+          Cambridge<br/>
+          CB3 0FD</li>
+      </ul>
+      <div class='spacing'></div>
+      <ul class='socials'>
+        <!--<li>
+          <a href='http://facebook.com'>
+            <i class='fa fa-facebook'></i>
+          </a>
+        </li>-->
+        <li>
+          <a href='http://twitter.com/AccelerateSci'>
+            <i class='fa fa-twitter'></i>
+          </a>
+        </li>
+        <li>
+          <a href='http://youtube.com/ProfNeilLawrence'>
+            <i class='fa fa-youtube'></i>
+          </a>
+        </li>
+      </ul>
+      <div class='spacing'></div>
+    </div>
   </div>
-
-  <!-- Social media and contact information -->
-  <div class="footer-right">
-
-    {% if site.contact_email %}
-    <a href="mailto:{{ site.contact_email }}"><i class="icon-envelope"></i>&nbsp;Contact Mail</a><br/>
-    {% endif %}
-
-    {% if site.github_username %}
-    <a href="https://github.com/{{ site.github_username }}"><i class="icon-github"></i>&nbsp;{{ site.github_username }}</a><br/>
-    {% endif %}
-
-    {% if site.twitter_username %}
-    <a href="https://twitter.com/{{ site.twitter_username }}"><i class="icon-twitter"></i>&nbsp;{{ site.twitter_username }}</a>
-    {% endif %}
-
-  </div>
-
+  <div class='two spacing'></div>
 </div>
-</footer>
-{% endif %}
+
+<script src="{{ "/javascripts/jquery.countTo.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ "/javascripts/jquery.appear.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ "/javascripts/jquery.validate.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ "/javascripts/jquery.sequence-min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ "/javascripts/jquery.easing.1.3.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ "/javascripts/app.js" | prepend: site.baseurl }}" type="text/javascript"></script>
