--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,43 +1,65 @@
 ---
-layout: page
+layout: blog
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.modified_date -%}
-        ~ 
-        {%- assign mdate = page.modified_date | date_to_xmlschema -%}
-        <time class="dt-modified" datetime="{{ mdate }}" itemprop="dateModified">
-          {{ mdate | date: date_format }}
-        </time>
-      {%- endif -%}
-	{%- if page.author -%}
-	{%- assign authors=page.author -%}
-	{%- elsif page.authors -%}
-	{%- assign authors=page.authors -%}
-	{%- endif -%}
-	{% if authors %}
-        • {% for author in authors %}
-        <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-            <span class="p-author h-card" itemprop="name">{% if author.consortium %}{% assign name=author.consortium.name %}{% elsif author.given %}{% assign name=author.given | append: ' ' | append: author.family %}{% elsif author.name %}{% assign name=author.name %}{% else %}{% assign name=author%}{%endif%}{%-if author.url %}<a href="{{ author.url }}">{%-endif-%}{{ name }}{%if author.url %}</a>{%-endif-%}</span></span>
-            {%- if forloop.last == false %}, {% endif -%}
-        {% endfor %}
-      {%- endif -%}</p>
-  </header>
 
-  <div class="post-content e-content" itemprop="articleBody">
-    {{ content }}
+<div class='mod modBlogPost big no_bg'>
+  <div class='images'>
+    {% for image in page.images %}
+      <div class='image'><img alt="" src="{{site.baseurl}}/{{image}}" /></div>
+    {% endfor %}
   </div>
+  <div class='content'>
+    <p class='info'>
+      <span>{{page.date | date: "%B %d, %Y" }}</span>
+      /
+      <span>
+        by
+        <a href="">{{page.author}}</a>
+      </span>
+    <!--  /
+      <span>
+        In
+        {% for cat in page.categories %}
+          <a href="#">{{cat}}</a>
+          {% unless forloop.last %}
+              ,
+          {% endunless %}
+        {% endfor %}
+      </span>
+      /
+      <span>
+        <a href="#">4 commetns</a>
+      </span>-->
+    </p>
+    <h3><a href="{{page.url}}">{{page.title}}</a></h3>
+    {{content}}
+  </div>
+</div>
+<div class='two spacing'></div>
+<!--<a id='comments'></a>
+{% include comments.html %}
+<div class='four spacing'></div>
+<div id='comment-form'>
+  <h3>Your comment</h3>
+  <form accept-charset='UTF-8' action='#' method='post'>
+    <p class='name'>
+      <label for='name'>Your Name</label>
+      <input class='input-text required' id='name' name='name' type='text'>
+    </p>
+    <p class='email'>
+      <label for='email'>Your Email</label>
+      <input class='input-text required' id='email' name='email' type='text'>
+    </p>
+    <p class='message'>
+      <label for='message'>Your Message</label>
+      <textarea class='required' cols='80' id='message' name='message' rows='5'></textarea>
+    </p>
+    <div class='spacing'></div>
+    <p>
+      <input class='button' type='submit' value='Send Message'>
+    </p>
+  </form>
+</div>-->
+<div class='four spacing'></div>
 
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
-  {%- endif -%}
-
-  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
-</article>
