--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,12 +6,12 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "/css/foundation.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/fontello.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/font-awesome.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/foundation.css' | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/fontello.css' | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/font-awesome.css' | relative_url }}">
 
-  <script src="{{ "/javascripts/libs.js" | prepend: site.baseurl | prepend: site.url }}" type="text/javascript"></script>
+  <script src="{{ "/assets/js/libs.js" | relative_url }}" type="text/javascript"></script>
   <script>
     // terrificjs bootstrap
     (function($) {
