--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
     <ul class='title-area'>
       <li class='name'>
         <h1>
-          <a href="{{site.baseurl}}/index.html">
-            <img style='max-width:230px; padding-bottom:10px; padding-top:6px' alt="" src="{{site.baseurl}}/images/apsci-logo-blue.png" />
+          <a href="{{site.url}}{{site.baseurl}}/index.html">
+            <img style='max-width:230px; padding-bottom:10px; padding-top:6px' alt="" src="{{site.url}}{{site.baseurl}}/assets/images/apsci-logo-blue.png" />
           </a>
         </h1>
       </li>
@@ -24,18 +24,18 @@
 
           {% if item.children %}
             <li class="has-dropdown {{active_class}}">
-              <a href="{{site.baseurl}}/{{ item.path }}">{{ item.name }}</a>
+              <a href="{{site.url}}{{site.baseurl}}/{{ item.path }}">{{ item.name }}</a>
               <ul class='dropdown'>
                 {% for child in item.children %}
                   <li>
-                    <a href="{{site.baseurl}}/{{ child.path }}">{{ child.name }}</a>
+                    <a href="{{site.url}}{{site.baseurl}}/{{ child.path }}">{{ child.name }}</a>
                   </li>
                 {% endfor %}
               </ul>
             </li>
           {% else %}
             <li class="{{active_class}}">
-              <a href="{{site.baseurl}}/{{ item.path }}">{{ item.name }}</a>
+              <a href="{{site.url}}{{site.baseurl}}/{{ item.path }}">{{ item.name }}</a>
             </li>
           {% endif %}
         {% endfor %}
