--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class='large-3 medium-3 columns'>
       <h1>
         <a href='index.html'>
-          <img alt="" src="{{site.baseurl}}/images/logo-landscape-white-out.png" />
+          <img alt="" src="{{site.baseurl}}/assets/images/logo-landscape-white-out.png" />
         </a>
       </h1>
       <p>©2021 {{site.title}}. All rights reserved.</p>
@@ -72,9 +72,9 @@
   <div class='two spacing'></div>
 </div>
 
-<script src="{{ "/javascripts/jquery.countTo.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-<script src="{{ "/javascripts/jquery.appear.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-<script src="{{ "/javascripts/jquery.validate.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-<script src="{{ "/javascripts/jquery.sequence-min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-<script src="{{ "/javascripts/jquery.easing.1.3.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-<script src="{{ "/javascripts/app.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/jquery.countTo.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/jquery.appear.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/jquery.validate.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/jquery.sequence-min.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/jquery.easing.1.3.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/app.js" | relative_url }}" type="text/javascript"></script>
