Create slides as an include.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,50 +1,35 @@
 ---
-layout: page
+layout: default
 ---
 
-<section class="block block__hero block__hero--standard">
-  <div class="container">
-    {% include top-row-logo-and-menu.html %}
-    {% include second-row-nav.html title=site.data.about.hero.title %}
+<style>
+  .modTeamMember{min-height:500px; margin-bottom:25px;}
+
+  [class*="column"] + [class*="column"]:last-child {
+    float: left;
+}
+</style>
+
+<div class='full'>
+  <div class='row'>
+    <div class='large-12 columns'>
+      <h4 style='color: #999'>Learn more</h4>
+      <h2>About Us</h2>
+      <div class='spacing'></div>
+    </div>
   </div>
-</section>
-<section class="block block__text">
-    <div class="container">
-        {{ site.data.about.body | markdownify }}
+  <div class='row'>
+    <div class='medium-8 columns'>
+      {{ contents }}
     </div>
-</section>
-<section class="block block__logo-grid">
-    <div class="container">
-        <div class="logo-grid__grid">
-            {% for item in site.data.about.partners %}
-            <a class="logo-grid__logo" href="{{ item.link }}">
-                <img src="{{ item.image }}">
-            </a>
-            {% endfor %}
-        </div>
+    <div class='medium-4 columns'>
+      <img class="fadeinright" width="500" height="336" alt="" src="{{data.images.directory}}/@stock/schmidt-futures-support.jpg" />
     </div>
-</section>
-<section class="block block__grid">
-    <div class="container">
-        <div class="grid__grid">
-            {% for item in site.data.about.grid %}
-            <a class="grid__item" href="{{ item.link }}">
-                <div class="grid__item-content">
-                    <h3>{{ item.title }}</h3>
-                    <p>{{ item.description }}</p>
-                    <div class="button button--white">
-                        Read More
-                        <span class="dot dot--top-left"></span>
-                        <span class="dot dot--top-right"></span>
-                        <span class="dot dot--bottom-left"></span>
-                        <span class="dot dot--bottom-right"></span>
-                    </div>
-                </div>
-                <div class="grid__item-image">
-                    <img src="{{ item.image }}">
-                </div>
-            </a>
-            {% endfor %}
-        </div>
-    </div>
-</section>
+  </div>
+ 
+</div>
+
+{% include our-team.html %}
+{% include advisory-group.html %}
+
+      
