--- a/_includes/main-slides.html
+++ b/_includes/main-slides.html
@@ -7,7 +7,7 @@
       <span></span>
     </a>
     <ul class='sequence-pagination'>
-      {% for slide in data.slides %}
+      {% for slide in site.data.slides %}
         {% if forloop.index == 1 %}
           <li class='current'></li>
         {% else %}
@@ -16,7 +16,7 @@
       {% endfor %}
     </ul>
     <ul class='sequence-canvas'>
-      {% for slide in data.slides %}
+      {% for slide in site.data.slides %}
         {% if forloop.index == 1 %}
           {% assign class = "static" %}
         {% else %}
@@ -24,7 +24,7 @@
         {% endif %}
 
         <li class='frame {{class}}'>
-          <div class='bg' style='background-image: url({{site.url}}{{site.baseurl}}{{data.images.directory}}{{slide.bg}});'></div>
+          <div class='bg' style='background-image: url({{site.url}}{{site.baseurl}}{{site.data.images.directory}}{{slide.bg}});'></div>
           {% if slide.infos %}
             {% for info in slide.infos %}
               <div class='info{{forloop.index}} {{info.animation}}'>
