--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -23,7 +23,7 @@ layout: default
       {{ content }}
     </div>
     <div class='medium-4 columns'>
-      <img class="fadeinright" width="500" height="336" alt="" src="{{site.url}}{{site.data.images.directory}}/@stock/schmidt-futures-support.jpg" />
+      <img class="fadeinright" width="500" height="336" alt="" src="{{site.url}}{{site.baseurl}}{{site.data.images.directory}}/@stock/schmidt-futures-support.jpg" />
     </div>
   </div>
  
