--- a/_includes/news-list.html
+++ b/_includes/news-list.html
@@ -3,7 +3,7 @@
     <div class='large-12 columns'>
       <div class='mod'>
         <div>
-          {% for article in site.articles %}
+          {% for article in site.news %}
             <div class='box' style='background: #f9f9f9;'>
               <h4>{{article.title}}</h4>
               <p><b>{{article.date}}</b></p>
