--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       <li class='name'>
         <h1>
           <a href="{{site.url}}{{site.baseurl}}/index.html">
-            <img style='max-width:230px; padding-bottom:10px; padding-top:6px' alt="" src="{{site.url}}{{site.baseurl}}/assets/images/apsci-logo-blue.png" />
+            <img style='max-width:230px; padding-bottom:10px; padding-top:6px' alt="" src="{{site.url}}{{site.baseurl}}{{site.data.images.directory}}/{{ site.data.site.logo }}" />
           </a>
         </h1>
       </li>
@@ -15,7 +15,7 @@
     </ul>
     <section class='top-bar-section'>
       <ul class="right">
-        {% for item in site.data.nav %}
+        {% for item in site.data.nav.main_nav %}
           {% if item.section_id == page.section_id %}
             {% assign active_class = "active" %}
           {% else %}
@@ -24,18 +24,18 @@
 
           {% if item.children %}
             <li class="has-dropdown {{active_class}}">
-              <a href="{{site.url}}{{site.baseurl}}/{{ item.path }}">{{ item.name }}</a>
+              <a href="{{site.url}}{{site.baseurl}}/{{ item.link }}">{{ item.label }}</a>
               <ul class='dropdown'>
-                {% for child in item.children %}
+                {% for child in item.submenu_item %}
                   <li>
-                    <a href="{{site.url}}{{site.baseurl}}/{{ child.path }}">{{ child.name }}</a>
+                    <a href="{{site.url}}{{site.baseurl}}/{{ child.link }}">{{ child.label }}</a>
                   </li>
                 {% endfor %}
               </ul>
             </li>
           {% else %}
             <li class="{{active_class}}">
-              <a href="{{site.url}}{{site.baseurl}}/{{ item.path }}">{{ item.name }}</a>
+              <a href="{{site.url}}{{site.baseurl}}/{{ item.link }}">{{ item.label }}</a>
             </li>
           {% endif %}
         {% endfor %}
