Update various parts for new config

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,7 @@
             </div>
             {% endif %}
           </li>
+	  {% endfor %}
         </ul>
       </div>
       <div class='spacing'></div>
