Update various parts for new config

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class='large-3 medium-3 columns'>
       <h1>
         <a href='index.html'>
-          <img alt="" src="{{site.baseurl}}/assets/images/logo-landscape-white-out.png" />
+          <img alt="" src="{{site.url}}/{{site.baseurl}}/{{site.data.images.directory}}/logo-landscape-white-out.png" />
         </a>
       </h1>
       <p>©2021 {{site.title}}. All rights reserved.</p>
