--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       <li class='name'>
         <h1>
           <a href="{{site.url}}{{site.baseurl}}/index.html">
-            <img style='max-width:230px; padding-bottom:10px; padding-top:6px' alt="" src="{{site.url}}{{site.baseurl}}{{site.data.images.directory}}/{{ site.data.site.logo }}" />
+            <img style='max-width:230px; padding-bottom:10px; padding-top:6px' alt="" src="{{site.url}}/{{site.baseurl}}/{{site.data.images.directory}}/{{ site.data.site.logo }}" />
           </a>
         </h1>
       </li>
@@ -24,18 +24,18 @@
 
           {% if item.children %}
             <li class="has-dropdown {{active_class}}">
-              <a href="{{site.url}}{{site.baseurl}}/{{ item.link }}">{{ item.label }}</a>
+              <a href="{{site.url}}/{{site.baseurl}}/{{ item.link }}">{{ item.label }}</a>
               <ul class='dropdown'>
                 {% for child in item.submenu_item %}
                   <li>
-                    <a href="{{site.url}}{{site.baseurl}}/{{ child.link }}">{{ child.label }}</a>
+                    <a href="{{site.url}}/{{site.baseurl}}/{{ child.link }}">{{ child.label }}</a>
                   </li>
                 {% endfor %}
               </ul>
             </li>
           {% else %}
             <li class="{{active_class}}">
-              <a href="{{site.url}}{{site.baseurl}}/{{ item.link }}">{{ item.label }}</a>
+              <a href="{{site.url}}/{{site.baseurl}}/{{ item.link }}">{{ item.label }}</a>
             </li>
           {% endif %}
         {% endfor %}
