--- a/_includes/extractinfo_publication.html
+++ b/_includes/extractinfo_publication.html
@@ -11,7 +11,7 @@
 {%-endif-%}
 {%-if include.entry.url -%}
 {%-capture url-%}
-{{site.url}}{{site.baseurl}}{{include.entry.url}}
+{{site.url}}/{{site.baseurl}}{{include.entry.url}}
 {%-endcapture-%}
 {%-else-%}
 {% assign url=false %}
