--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <ul class='title-area'>
       <li class='name'>
         <h1>
-          <a href="{{site.url}}{{site.baseurl}}/index.html">
+          <a href="{{site.url}}/{{site.baseurl}}/index.html">
             <img style='max-width:230px; padding-bottom:10px; padding-top:6px' alt="" src="{{site.url}}/{{site.baseurl}}/{{site.data.images.directory}}/{{ site.data.site.logo }}" />
           </a>
         </h1>
