--- a/_includes/paper_open_graph_meta.html
+++ b/_includes/paper_open_graph_meta.html
@@ -14,15 +14,15 @@
 <meta property="article:author" content="">
 
 {%-endif-%} 
-<meta property="og:url" content="{{site.url}}{{site.baseurl}}{{ page.url }}"/>
+<meta property="og:url" content="{{site.url}}/{{site.baseurl}}{{ page.url }}"/>
 {%-if site.logo-%}
-<meta property="og:image" content="{{site.url}}{{site.baseurl}}/assets/images/{{site.logo}}"/>
+<meta property="og:image" content="{{site.url}}/{{site.baseurl}}/{{site.data.images.directory}}/{{site.logo}}"/>
 
 {%-elsif site.style=='pmlr'-%}
-<meta property="og:image" content="{{site.url}}{{ site.baseurl }}/assets/images/logo-pmlr.png"/>
+<meta property="og:image" content="{{site.url}}/{{ site.baseurl }}/{{site.data.images.directory}}/logo-pmlr.png"/>
 
 {%-elsif site.style=='aistats'-%}
-<meta property="og:image" content="{{site.url}}{{ site.baseurl }}/assets/images/logo-aistats.jpg"/>
+<meta property="og:image" content="{{site.url}}/{{ site.baseurl }}/{{site.data.images.directory}}/logo-aistats.jpg"/>
 
 {%-endif-%}
 {%-if site.style=='pmlr'-%}
