--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,10 +34,10 @@ layout: default
           {% for item in site.data.boxes.items %}
             <div class='item'>
               <!--<i class='{{item.icon_class}}'></i>-->
-              <img style='max-width:50px; display:block; margin:0 auto; margin-bottom:25px;' src='{{site.url}}{{site.baseurl}}/assets/images/{{item.image}}'/>
+              <img style='max-width:50px; display:block; margin:0 auto; margin-bottom:25px;' src='{{site.url}}/{{site.baseurl}}/assets/images/{{item.image}}'/>
               <h4>{{item.title}}</h4>
               <p>{{item.text}}</p>
-              <a class="button small" href="{{site.url}}{{site.baseurl}}/{{item.link}}">{{item.link_text}}</a>
+              <a class="button small" href="{{site.url}}/{{site.baseurl}}/{{item.link}}">{{item.link_text}}</a>
             </div>
           {% endfor %}
         </div>
@@ -67,7 +67,7 @@ layout: default
                   <div class='item'>
                     <p class='author'>{{item.text}}</p>
                     <p class='quote'>{{item.title}}, {{item.date}}</p>
-                    <a class="button small" href="{{site.baseurl}}/{{item.link}}">{{item.link_text}}</a>
+                    <a class="button small" href="{{item.link}}">{{item.link_text}}</a>
                     <div class='two spacing'></div>
                   </div>
                 {% endfor %}
