--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -11,7 +11,7 @@ layout: page
         <span class="hero__dot hero__dot--bottom-left"></span>
         <span class="hero__dot hero__dot--bottom-right"></span>
         <div class="hero__item hero__item--top-left">
-          <a href="{{site.url}}/people/" class="back-to-collection">
+          <a href="{{site.url}}/{{site.baseurl}}/people/" class="back-to-collection">
             <svg width="20px" height="12px" viewBox="0 0 20 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                 <g id="Home-Concept-v1.0-b" transform="translate(-1583.000000, -759.000000)" fill="#FFFFFF">
@@ -47,7 +47,7 @@ layout: page
       <div class="column">
         <span class="hero__dot hero__dot--bottom-right"></span>
         <div class="hero__item hero__item--top-left limit-height">
-          <img class="hero__image--people" src="{{site.url}}{{site.baseurl}}/assets/uploads/{{page.image}}" alt="Image of {{page.title}}">
+          <img class="hero__image--people" src="{{site.url}}/{{site.baseurl}}/{{site.images.directory}}/{{page.image}}" alt="Image of {{page.title}}">
         </div>
       </div>
     </div>
