--- a/_layouts/project-single.html
+++ b/_layouts/project-single.html
@@ -139,7 +139,7 @@ layout: page
       {% if item.slug == people_slug %}
       <a href="{{ item.url }}" class="team__member">
         <div class="team__member-image">
-          <img src="{{site.url}}{{site.baseurl}}/assets/uploads/{{item.image}}" alt="Image of {{item.given}} {{item.family}}">
+          <img src="{{site.url}}/{{site.baseurl}}/{{site.data.images.directory}}/{{item.image}}" alt="Image of {{item.given}} {{item.family}}">
         </div>
         <div class="team__member-details">
           <div>
