--- a/_layouts/research-single.html
+++ b/_layouts/research-single.html
@@ -54,7 +54,7 @@
                             <span class="hero__dot hero__dot--bottom-left"></span>
                             <span class="hero__dot hero__dot--bottom-right"></span>
                             <div class="hero__item hero__item--top-left">
-                                <a href="{{site.url}}/research/" class="back-to-collection">
+                                <a href="{{site.url}}/{{site.baseurl}}/research/" class="back-to-collection">
                                     <svg width="20px" height="12px" viewBox="0 0 20 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                             <g id="Home-Concept-v1.0-b" transform="translate(-1583.000000, -759.000000)" fill="#FFFFFF">
@@ -128,7 +128,7 @@
                                     {% if item.slug == project_slug %}
                                         <a href="{{ item.url }}" class="projects__item">
                                             <div class="projects__item-image">
-                                                <img src="{{site.url}}{{site.baseurl}}/assets/uploads/{{item.image}}" alt="Image of {{item.title}}">
+                                                <img src="{{site.url}}/{{site.baseurl}}/{{site.data.images.directory}}/{{item.image}}" alt="Image of {{item.title}}">
                                             </div>
                                             <div class="projects__item-details">
                                                 <div>
@@ -159,8 +159,8 @@
                                 {% for item in site.people %}
                                     {% if item.slug == people_slug %}
                                         <a href="{{ item.url }}" class="team__member">
-                                            <div class="team__member-image">
-                                                <img src="{{site.url}}{{site.baseurl}}/assets/uploads/{{item.image}}" alt="Image of {{item.title}}">
+                                           <div class="team__member-image">
+                                                <img src="{{site.url}}/{{site.baseurl}}/{{site.data.images.directory}}/{{item.image}}" alt="Image of {{item.title}}">
                                             </div>
                                             <div class="team__member-details">
                                                 <div>
