--- a/_includes/our-team.html
+++ b/_includes/our-team.html
@@ -18,23 +18,31 @@
      <div class='small-6 medium-3 large-3 columns'>
         <div class='mod modTeamMember style-2'>
           <div class='member'>
-            <img class="avatar" alt="" src="{{site.url}}/{{ site.baseurl}}/{{ site.data.images.directory}}{%if person.avatar and person.avatar != "" %}{{person.avatar}}{% else %}APSci_place-holder.jpg{%endif%}" />
+            <img class="avatar" alt="" src="{{site.url}}/{{ site.baseurl}}/{{ site.data.images.directory}}{%if person.image and person.image != "" %}{{person.image}}{% else %}APSci_place-holder.jpg{%endif%}" />
             <div class='overlay'>
               <ul class='socials'>
-                {% for social in person.socials %}
-                  <li>
-                    <a target='_blank' href='{{social.url}}'>
-                      <i class='{{social.icon_class}}'></i>
-                    </a>
-                  </li>
-                {% endfor %}
+                {% if person.website %}
+		<li><a target='_blank' href='{{person.website}}'><i class='fa fa-globe'></i></a></li>
+		{% endif %}
+                {% if person.github %}
+		<li><a target='_blank' href='https://github.com/{{person.github}}'><i class='fa fa-github'></i></a></li>
+		{% endif %}
+                {% if person.orcid %}
+		<li><a target='_blank' href='https://orcid.org/{{person.orcid}}'><i class='fa-brands fa-orcid'></i></a></li>
+		{% endif %}
+                {% if person.linkedin %}
+		<li><a target='_blank' href='https://linkedin.com/{{person.linedin}}'><i class='fa fa-linkedin'></i></a></li>
+		{% endif %}
+                {% if person.twitter %}
+		<li><a target='_blank' href='https://twitter.com/{{person.twitter}}'><i class='fa fa-twitter'></i></a></li>
+		{% endif %}		
               </ul>
             </div>
           </div>
           <h3>{{name}}</h3>{% if person.position %}
           <p class='position'>{{person.position}}{% if person.department %}
-          <br>{{person.department}}{%endif%}</p>{%endif%}{%if person.desc%}
-          <p>{{person.desc}}</p>{%endif%}
+          <br>{{person.department}}{%endif%}</p>{%endif%}{%if person.biography%}
+          <p>{{person.biography}}</p>{%endif%}
           <div class='two spacing'></div>
         </div>
       </div>
