--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,34 +26,14 @@ layout: default
   </div>
   <!--<div class='spacing'></div>-->
 </div>
-<div class='full' style='background: #f5f5f5'>
-  <div class='row'>
-    <div class='large-12 columns'>
-      <div class='mod'>
-        <div class='boxes flex between'>
-          {% for item in site.data.boxes.items %}
-            <div class='item'>
-              <!--<i class='{{item.icon_class}}'></i>-->
-              <img style='max-width:50px; display:block; margin:0 auto; margin-bottom:25px;' src='{{site.url}}/{{site.baseurl}}/assets/images/{{item.image}}'/>
-              <h4>{{item.title}}</h4>
-              <p>{{item.text}}</p>
-              <a class="button small" href="{{site.url}}/{{site.baseurl}}/{{item.link}}">{{item.link_text}}</a>
-            </div>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class='four spacing'></div>
-</div>
-
+{% include main-boxes.html %}
 
 
 
 <div class='full'>
   <div class='row'>
     <div class='medium-6 columns'>
-      <a class="twitter-timeline" data-height="340" data-link-color="#FAB81E" href="https://twitter.com/AccelerateSci?ref_src=twsrc%5Etfw">Tweets by AccelerateSci</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      {% include twitter-feed.html %}
     </div>
     
     <div class='row'>
@@ -62,16 +42,7 @@ layout: default
           <div class='row'>
             <div class='two spacing'></div>
             <div class='small-12 columns'>
-              <div class='items centered-text'>
-                {% for item in site.data.latest_news.items  %}
-                  <div class='item'>
-                    <p class='author'>{{item.text}}</p>
-                    <p class='quote'>{{item.title}}, {{item.date}}</p>
-                    <a class="button small" href="{{item.link}}">{{item.link_text}}</a>
-                    <div class='two spacing'></div>
-                  </div>
-                {% endfor %}
-              </div>
+	      {% include latest-news.html %}
             </div>
             <div class='spacing'></div>
           </div>
