--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -14,16 +14,16 @@ layout: default
   <div class='row'>
     <div class='large-12 columns'>
       <h4 style='color: #999'>Learn more</h4>
-      <h2>About Us</h2>
+      <h2>{{ site.data.homepage.about.title }}</h2>
       <div class='spacing'></div>
     </div>
   </div>
   <div class='row'>
     <div class='medium-8 columns'>
-      {{ content }}
+      {{ site.data.homepage.about.content | markdownify }}
     </div>
     <div class='medium-4 columns'>
-      <img class="fadeinright" width="500" height="336" alt="" src="{{site.url}}/{{site.baseurl}}{{site.data.images.directory}}/@stock/schmidt-futures-support.jpg" />
+      <img class="fadeinright" width="500" height="336" alt="" src="{{site.data.images.directory | relative_url}}/{{ site.data.homepage.about.image }}" />
     </div>
   </div>
  
