--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -23,7 +23,7 @@ layout: default
       {{ site.data.homepage.about.content | markdownify }}
     </div>
     <div class='medium-4 columns'>
-      <img class="fadeinright" width="500" height="336" alt="" src="{{site.data.images.directory | relative_url}}/{{ site.data.homepage.about.image }}" />
+      <img class="fadeinright" width="500" height="336" alt="" src="{{site.data.images.directory | relative_url}}/{{ site.data.homepage.about.image }}b" />
     </div>
   </div>
  
