Update theme with listing approach.

--- a/_includes/our-team.html
+++ b/_includes/our-team.html
@@ -10,7 +10,7 @@
     {% for person_slug in site.data.team.members %}
     {% assign count = 0 %}
     {% for person in people %}
-    {% if item.slug == person_slug %}
+    {% if person.slug == person_slug %}
     {% if person.team %}{% include extractname.html entry=person %}
       {% assign count = count | plus: 1 %}
       {% if count > 4 %}<!-- add in row here --> 
