Update theme with listing approach.

--- a/_includes/our-team.html
+++ b/_includes/our-team.html
@@ -48,7 +48,7 @@
           <div class='two spacing'></div>
         </div>
       </div>
-   {% endif %}{% endfor %}
+   {% endif %}{% endfor %}{% endfor %}
   </div>
   <div class='three spacing'></div>
 </div>
