--- a/_includes/our-team.html
+++ b/_includes/our-team.html
@@ -10,7 +10,7 @@
     {% assign count = 0 %}
     {% for person in site.people %}
     {% if person.slug == person_slug %}
-    {% if person.team %}{% include extractname.html entry=person %}
+      {% include extractname.html entry=person %}
       {% assign count = count | plus: 1 %}
       {% if count > 4 %}<!-- add in row here --> 
       {% assign count = 1 %}
