--- a/_includes/publication-list.html
+++ b/_includes/publication-list.html
@@ -9,7 +9,7 @@
 	      {%-include extractinfo_publication.html entry=include.entry-%}
               <p>{%-for person in authors-%}
 		{%-include listperson.html seperator=', '-%}
-		{%-endfor-%}</p>
+		{%-endfor-%}{% if journal %} <i>{{ journal }}</i>, {%elsif container-title %} <i>{{ container-title }}</i>,{% endif %}{%if publisher %} {{ publisher }}{% endif %}{% if volume %} {{ volume }}{% endif %}{% if number %} ({{number}}){%endif%}:{% if firstpage %}{{ firstpage }}{% endif %}{% if lastpage %}-{{ lastpage }}{% endif %}{% if year %}, {{ year }}{% endif %}</p>
               <p>{{paper.description}}</p>
               <a class='button small' href='{{paper.url}}'>Read more</a>
             </div>
