--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,85 +1,93 @@
-<div id='footer'>
-  <div class='three spacing'></div>
-  <div class='row'>
-    <div class='large-3 medium-3 columns'>
-      <h1>
-        <a href='index.html'>
-          <img alt="" src="{{site.url}}/{{site.baseurl}}/{{site.data.images.directory}}/logo-landscape-white-out.png" />
-        </a>
-      </h1>
-      <p>©2021 {{site.title}}. All rights reserved.</p>
-      <div class='spacing'></div>
-      <div class='spacing'></div>
-    </div>
-    <div class='large-3 medium-3 columns'>
-      <div class='spacing'></div>
-      <div class='links'>
-        <h4>Our work</h4>
-        <ul>
-	  {% for item in site.data.nav.footer_nav %}
-          <li>
-            <a href="{{ item.link }}">{{ item.label }}</a>
-            {% if item.submenu_item != nil %}
-            <div class="submenu">
-              {% for item in item.submenu_item. %}
-              <a href="{{ item.link }}">{{ item.label }}</a>
-              {% endfor %}
-            </div>
-            {% endif %}
-          </li>
-	  {% endfor %}
-        </ul>
-      </div>
-      <div class='spacing'></div>
-    </div>
-    <div class='large-3 medium-3 columns'>
-      <div class='spacing'></div>
-      <div class='links'>
-        <h4>Recent posts</h4>
-        <ul>
-          {% for post in site.posts %}
-            <li><a href="{{post.url}}">{{post.title}}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-      <div class='spacing'></div>
-    </div>
-    <div class='large-3 medium-3 columns'>
-      <div class='spacing'></div>
-      <h4>Contact us</h4>
-      <ul>
-        <li><a href="mailto:{{ site.data.site.contact_details.email }}">
-                            {{ site.data.site.contact_details.email }}
-                        </a></li>
-        <li>{{ site.data.site.contact_details.address | markdownify }}</li>
-      </ul>
-      <div class='spacing'></div>
-      <ul class='socials'>
-        <!--<li>
-          <a href='http://facebook.com'>
-            <i class='fa fa-facebook'></i>
-          </a>
-        </li>-->
-        <li>
-          <a href='{{ site.data.site.social_details.twitter_link }}'>
-            <i class='fa fa-twitter'></i>
-          </a>
-        </li>
-        <li>
-          <a href='{{ site.data.site.social_details.youtube_link }}'>
-            <i class='fa fa-youtube'></i>
-          </a>
-        </li>
-      </ul>
-      <div class='spacing'></div>
-    </div>
-  </div>
-  <div class='two spacing'></div>
-</div>
+<footer role="contentinfo">
+    <div class="container">
+        <div class="footer__upper row row--justified">
+            <div class="footer__navigation column-m-12 column-t-4  column-d-4">
+                <div class="section-heading">
+                    <h2>Navigation</h2>
+                    <span></span>
+                </div>
 
-<script src="{{ "/assets/js/jquery.countTo.js" | relative_url }}" type="text/javascript"></script>
-<script src="{{ "/assets/js/jquery.appear.js" | relative_url }}" type="text/javascript"></script>
-<script src="{{ "/assets/js/jquery.validate.js" | relative_url }}" type="text/javascript"></script>
-<script src="{{ "/assets/js/jquery.sequence-min.js" | relative_url }}" type="text/javascript"></script>
-<script src="{{ "/assets/js/jquery.easing.1.3.js" | relative_url }}" type="text/javascript"></script>
-<script src="{{ "/assets/js/app.js" | relative_url }}" type="text/javascript"></script>
+                <ul>
+                    {% for item in site.data.nav.footer_nav %}
+                        <li>
+                            <a href="{{ item.link }}">{{ item.label }}</a>
+                            {% if item.submenu_item != nil %}
+                                <div class="submenu">
+                                    {% for item in item.submenu_item. %}
+                                        <a href="{{ item.link }}">{{ item.label }}</a>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+                        </li>
+                    {% endfor %}
+                </ul>
+                <div class="cambridge-uni-quicklinks-footer" id="cambridge-uni-quicklinks-footer">
+                    <div class="section-heading">
+                        <h2>Cambridge Uni</h2>
+                        <span></span>
+                    </div>
+
+                    <ul>
+                        {% for item in site.data.nav.top_bar.top_bar_nav %}
+                            <li>
+                                <a href="{{ item.link }}" target="_blank" rel="noreferrer">{{ item.label }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__contact column-m-12 column-t-4 column-d-6">
+                <div class="section-heading">
+                    <h2>Contact Us</h2>
+                    <span></span>
+                </div>
+                <div class="footer__contact-details">
+                    <div>
+                        {{ site.data.site.contact_details.address | markdownify }}
+                    </div>
+                    <div>
+                        <a href="tel:{{ site.data.site.contact_details.tel }}">Tel:
+                            {{ site.data.site.contact_details.tel }}
+                        </a>
+                        <a href="tel:{{ site.data.site.contact_details.fax }}">Fax:
+                            {{ site.data.site.contact_details.fax }}
+                        </a>
+                        <a href="mailto:{{ site.data.site.contact_details.email }}">Contact:
+                            {{ site.data.site.contact_details.email }}
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__socials column-m-12 column-t-4 column-d-2">
+                <div class="section-heading">
+                    <h2>Social</h2>
+                    <span></span>
+                </div>
+                <div class="footer__socials-links">
+                    <a href="{{site.data.site.social_details.twitter_link}}">
+                        <img src="{{site.baseurl}}/{{site.twitter_svg}}" alt="Twitter Logo">
+                    </a>
+                    <a href="{{site.data.site.social_details.facebook_link}}">
+                        <img src="{{site.baseurl}}/{{site.facebook_svg}}" alt="Facebook Logo">
+                    </a>
+                    <a href="{{site.data.site.social_details.instagram_link}}">
+                        <img src="{{site.baseurl}}/{{site.instagram_svg}}" alt="Instagram Link">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__lower">
+            <div class="footer__logos">
+                {% for item in site.data.site.footer_images %}
+                    <a href="{{ item.link }}">
+                        <img src="{{ item.image }}" alt="Logo">
+                    </a>
+                {% endfor %}
+            </div>
+            <div class="footer__credits">
+                <a href="https://www.thelonelypixel.co.uk/">Designed and built by The Lonely Pixel</a>
+            </div>
+        </div>
+    </div>
+</footer>
+{% include offcanvas.html %}
