--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,40 +1,16 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
-  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/foundation.css' | relative_url }}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {%- include seo-info.html -%}
+  <title>ML@CL{% if page.title %} {{page.title}}{% endif %}</title>
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/style.css' | relative_url }}">
-  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/fontello.css' | relative_url }}">
-  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/font-awesome.css' | relative_url }}">
-
-  <script src="{{ "/assets/js/libs.js" | relative_url }}" type="text/javascript"></script>
-  <script>
-    // terrificjs bootstrap
-    (function($) {
-        $(document).ready(function() {
-            var $page = $('body');
-            var config = {
-              dependencyPath: {
-                plugin: 'assets/js/'
-              }
-            }
-            var application = new Tc.Application($page, config);
-            application.registerModules();
-            application.start();
-        });
-    })(Tc.$);
-  </script>
-  <link rel="preconnect" href="https://fonts.gstatic.com"> 
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,300" media="screen" rel="stylesheet" type="text/css" />
-  <script src="{{ "/assets/js/masonry.pkgd.js" | relative_url }}" type="text/javascript"></script>
-  <script src="{{ "/assets/js/imagesloaded.pkgd.min.js" | relative_url }}" type="text/javascript"></script>
-  <script src="{{ "/assets/js/slick.min.js" | relative_url }}" type="text/javascript"></script>
-
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  {% include netlify/cms-widget.html %}
+  {%- feed_meta -%}
+  {%- if jekyll.environment == 'production' and site.google_analytics -%}
+    {%- include google/analytics.html -%}
+  {%- endif -%}
+  {%-include hidden_copy_code.html-%}
+  {%- include google/analytics-code.html -%}  
+  {% include mathjax_code.html %}
 </head>
