Remove comments include

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ layout: blog
 </div>
 <div class='two spacing'></div>
 <!--<a id='comments'></a>
-{% include comments.html %}
+% include comments.html %
 <div class='four spacing'></div>
 <div id='comment-form'>
   <h3>Your comment</h3>
