--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -2,4 +2,24 @@
 layout: page
 ---
 
+<style>
+  .box{padding:25px; margin-bottom:25px;}
+</style>
+
+<div class='full title' style='background-image:url({{site.data.images.directory | relative_url}}/headers/research.jpg); min-height:250px'>
+  <div class='row'>
+    <div class='large-12 columns'>
+      <h2 style='letter-spacing: 2px;font-size: 4.28571rem; color: rgb(255, 255, 255); text-transform:capitalize'>News</h2>
+    </div>
+  </div>
+</div>
+
+<div class='full'>
+  <div class='row'>
+    <div class='large-12 columns'>
+
   {{ content }}
+      <div class='spacing'></div>
+    </div>
+  </div>
+</div>
